créer la vue des tags