@@ -2,12 +2,12 @@ package nimnamfood.command.tag;
 
 import nimnamfood.model.Repositories;
 import nimnamfood.model.tag.Tag;
+import nimnamfood.model.tag.TagCreated;
 import org.springframework.stereotype.Component;
 import vtertre.command.CommandHandler;
 import vtertre.ddd.Tuple;
 import vtertre.ddd.event.DomainEvent;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -15,8 +15,8 @@ import java.util.UUID;
 public class CreateTagCommandHandler implements CommandHandler<CreateTagCommand, UUID> {
     @Override
     public Tuple<UUID, List<DomainEvent>> execute(CreateTagCommand command) {
-        final Tag tag = new Tag(command.name);
-        Repositories.tags().add(tag);
-        return Tuple.of(tag.getId(), Collections.emptyList());
+        final Tuple<Tag, TagCreated> tuple = Tag.factory().create(command.name);
+        Repositories.tags().add(tuple._1);
+        return tuple.map(((tag, event) -> Tuple.of(tag.getId(), List.of(event))));
     }
 }
